k8s/30-ui-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 2
  selector:
    matchLabels: { app: ui }
  template:
    metadata: { labels: { app: ui } }
    spec:
      containers:
        - name: ui
          image: REPLACE_UI_IMAGE
          ports: [{ containerPort: 8080 }]
---
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector: { app: ui }
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
